[package]
name = "proteon"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Jiang <kevinfjiang@yahoo.com>", "Nicolas Le Manchet <nicolas@lemanchet.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
clap = { version = "4.0.26", features = ["derive"] }
futures = "0.3.25"
log = "0.4.17"
redis = {version="0.22.1", features = ["aio", "async-std-comp"]}
tokio = {version="1.22.0", features = ["net", "time", "sync", "macros", "rt-multi-thread", "io-std"]}
mockall_double = "0.2.1"

[dev-dependencies]
mockall = "0.11.3"

